<resources>
    <string name="app_name">Plato</string>
    <string name="error_message">Failed to load movies/No Movies Found</string>
    <string name="sort_by">Sort By</string>
    <string name="movie_poster_image">Movie Poster Image</string>
    <string name="title_activity_details">Movie Details</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date: </string>
    <string name="release_date_format">Release Date: %s</string>
    <string name="ratings">Ratings: </string>
    <string name="ratings_format">Ratings: %.1f</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="fav_movie_provider_authority" translatable="false">com.ajibigad.udacity.plato.data.FavoriteMovieProvider</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite_movies">Favorite Movies</string>
    <string name="title_all_movies">All Movies</string>
    <string name="watch_trailer_1">Watch Trailer 1</string>
    <string name="watch_trailer_2">Watch Trailer 2</string>
    <string name="view_reviews">View Reviews</string>
    <string name="share_first_trailer">Share First Trailer</string>
    <string name="synopsis">Synopsis</string>
    <string name="youtube_link" translatable="false">https://www.youtube.com/watch?v=</string>
    <string name="share_trailer_title">Share Trailer URL</string>
    <string name="main_activity_label">Popular Movies</string>
    <string name="favorite_button_label">Favorite Button</string>
    <string name="movie_poster_image_label">Movie Poster Image</string>
    <string name="info_tab_label">Info</string>
    <string name="trailer_tab_label">Trailers</string>
    <string name="review_tab_layout">Reviews</string>
    <string name="trailer_error_msg">Failed to load trailer / No Trailer found</string>
    <string name="review_error_msg">Failed to load reviews / No Review found</string>
    <string name="refresh">Refresh</string>
    <string name="casts_error_msg">No Cast Found/Network Error</string>
    <string name="cast_tab_layout">Casts</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--Data Settings-->
    <string name="pref_header_data">Data Settings</string>

    <string name="pref_title_movie_list_size">Movie List Size</string>
    <string name="pref_movie_list_size_key" translatable="false">movie_list_size</string>
    <string name="pref_sort_criteria_key">sort_criteria</string>
    <string name="pref_sort_direction_key">sort_direction</string>
    <string name="search_hint">Search by movie name</string>
    <string name="search_results_error_message">No movies found</string>
    <string name="set_reminder">Turn on reminder</string>
    <string name="reminder_title">POPULAR MOVIES REMINDER</string>
    <string name="notification_message">%s is released today!!!</string>
    <string name="movie_has_been_released">This movie has been released already</string>
    <string name="reminder_set">Reminder set</string>
    <string name="favorite_movie_added_msg">Movie added to Favorites</string>
    <string name="favorite_movie_removed_msg">Movie removed from Favorites</string>
    <string name="adding_favorite_movie_faliure_msg">Failed to add to favorite</string>
    <string name="loading_more_movie_details_failure_msg">Check connection to load more details</string>
    <string name="movie_not_found">Movie not found</string>
    <string name="reminder_for_only_fav_movies_msg">Reminder can only be set for favorite movies</string>
    <string name="no_network_connection">Please check network connection</string>
    <string name="could_not_fetch_movies">Could not fetch movies</string>
    <string name="check_network_connection">Please check network connection</string>
    <string name="failed_to_save_poster_image">Failed to save image poster for %s</string>
    <string name="search_results">Search Results</string>
    <string-array name="pref_movie_list_size_titles">
        <item>20 movies</item>
        <item>40 movies</item>
        <item>60 movies</item>
        <item>80 movies</item>
        <item>100 movies</item>
    </string-array>
    <string-array name="pref_movie_list_size_values">
        <item>20</item>
        <item>40</item>
        <item>60</item>
        <item>80</item>
        <item>100</item>
    </string-array>
</resources>
